--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -1,5 +1,6 @@
-aiogram==3.4.1
+aiogram==3.13.1
 httpx==0.27.0
-pydantic==2.7.0
+pydantic==2.8.2
 python-dotenv==1.0.1
 redis==5.0.4
+pydantic-settings
