--- a/services/provisioner/requirements.txt
+++ b/services/provisioner/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.110.1
 uvicorn==0.29.0
-pydantic==2.7.0
+pydantic==2.8.2
 python-dotenv==1.0.1
 minio==7.2.5
 passlib[bcrypt]==1.7.4
+pydantic-settings
